chore(secret-policy): add copy of secret-policy in non-default-branch with different hash

--- a/.github/workflows/test-fail-with-secret-policy.yml
+++ b/.github/workflows/test-fail-with-secret-policy.yml
@@ -25,7 +25,7 @@ jobs:
           echo "API Key: ${{ secrets.API_KEY }}"
           echo "This workflow uses secrets and should be blocked on non-default branch"
 
-      - name: Use toJSON secrets pattern  
+      - name: Use toJSON secrets pattern
         run: |
           echo "All secrets: ${{ toJSON(secrets) }}"
           echo "This pattern should also trigger the secret policy"
@@ -36,3 +36,4 @@ jobs:
           echo "This is a fail scenario for secret policy enforcement"
           echo "NOTE: This workflow should be tested from a non-default branch"
           echo "with different content than the default branch version"
+          echo "changing hash to trigger the secret policy"
